# FPVS-Studio-2.0

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.agents/: verification.toml
.agents/scripts/: verify.py
.github/workflows/: ci.yml  docs.yml
docs/: DESIGN.md  ENGINE_INTERFACE.md  ENVIRONMENT.md  FPVS_Studio_v1_Architecture_Spec.md  FRONTEND.md  GUI_WORKFLOW.md  PACKAGING.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  RUNSPEC.md  RUNTIME_EXECUTION.md  SECURITY.md  SESSION_PLAN.md  TECH_DEBT.md  index.md
docs-site/: index.md  install.md  prepare-images.md  publication.md  quickstart.md  run-session.md  troubleshooting.md  updates.md
docs/agent/: agent-index.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: README.md  plan-review-workflow.md  tech-debt-tracker.md
docs/product-specs/: index.md
docs/references/: index.md
packaging/: AGENTS.md
packaging/inno/: fpvs_studio.iss
packaging/pyinstaller/: fpvs_studio.spec
scripts/: build_exe.ps1  build_installer.ps1  build_release.cmd  build_release.ps1  check_compiler.ps1  check_docs_hygiene.ps1  check_gc.ps1  check_gui.ps1  check_preprocessing.ps1  check_quality.ps1  check_runtime.ps1  clean_workspace.ps1  report_line_counts.ps1  script_helpers.ps1  smoke_packaged_app.ps1  sync_branding_assets.ps1  sync_branding_assets.py  verify.ps1
src/: AGENTS.md
src/fpvs_studio/: __init__.py
tests/: __init__.py  conftest.py  qt_test_files.txt  qt_test_registry.py
tests/gui/: conftest.py  helpers.py  test_assets_run_launch.py  test_authoring_gui.py  test_components.py  test_conditions_session_fixation.py  test_fixation_settings_page.py  (+14 more)
(+341 files in other folders)
